# Cider

./: CMakeLists.txt  LICENSE  README.md
include/cider/: Fiber.h  GrowingStack.h  Mutex.h  WaitQueue.h  context.h  context.hpp
include/cider/internal/: LinuxContext.h  SpinLock.h  WinContext.h  config.h
include/cider/scheduling/: GreedyScheduler.h  Scheduler.h
src/: Fiber.cpp  FiberTLS.cpp  GrowingStack.cpp  Mutex.cpp  WaitQueue.cpp  context.c  context.cpp  context_linux_x64.S  context_masm.asm
src/internal/: SpinLock.cpp
src/scheduling/: GreedyScheduler.cpp
tests/: CMakeLists.txt  basic_context_switch.cpp  exceptions.cpp  fiber_local_storage.cpp  fiber_mutex.cpp  growing_stack.cpp  simple_fiber.cpp  swap_context.cpp
